compiler/tests/success/x86-64/bug_730.jazz
export
fn main(reg u64 p) {
  [p] = (2u32)[1, 0];
}
