compiler/tests/fail/param_expansion/x86-64/global_array_not_constant.jazz
u64[1] a = { 1 };
u64[3] b = { 0, a[1], 2 };
  // a[1] is not defined, and thus constant propagation is impossible
